--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="row">
 				<div class="col-xs-5 header-logo">
 					<br>
-					<a href="index2.html"><img src="img/logo.png" alt="" class="img-responsive"></a>
+					<a><img src="img/logo.png" alt="" class="img-responsive"></a>
 				</div>
 
 				<div class="col-md-7">
@@ -357,12 +357,16 @@
 			      <img src="img/img5.jpg" alt="Flower">
 			    </div>
 
-			    			    <div class="item">
+			    <div class="item">
 			      <img src="img/img6.jpg" alt="Flower">
 			    </div>
 
-			    			    <div class="item">
+			    <div class="item">
 			      <img src="img/img7.jpg" alt="Flower">
+					</div>
+					
+					<div class="item">
+			      <img src="img/img8.jpg" alt="Flower">
 			    </div>
 			  </div>
 
