--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<header class="top-header">
 		<div class="container">
 		<div class="row" id="lg">
-			<div class="col-md-9"><h4>Email: info@sednaenergy.in</h4></div>
+			<div class="col-md-9"><h4>Email: info@sednaenergy.in , ajayjose@gmail.com</h4></div>
 			<div class="col-md-3"><h4>Phone: +91 8891084443, +91 9400581251</h4></div>
 			</div>
 			<div class="row">
