add product range

--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
 
 					<h3>Our product range</h3>
 					 
-					<p>Off grid inverter 1KVA to 30KVA, On grid inverter 1KW to 100KW, containerised inverter station 500Kw to 1260Kw, MPPT Charger, Home UPS 500VA to 5KVA, IGBT Solar Water Heater, Solar Panel, Windmills, Solar Street lights, LED Lights Fittings, etc.
+					<p>Solar power System Design, Engineering  &  Integration 1kw to 1MW
+						Solar Water Heaters Design, Engineering  &  Integration – 100 LPD to 500,000 LPD, Off grid inverter 1KVA to 30KVA, On grid inverter 1KW to 100KW, containerised inverter station 500Kw to 1260Kw, MPPT Charger, ,Home UPS 500VA to 5KVA, 
+						CCTV, Water Level Controller, Solar Water Heater, Solar Panel, Windmills, Solar Street lights, LED Lights Fittings, etc.
 	
 					</p>
 
