add domain expertise

--- a/index.html
+++ b/index.html
@@ -187,7 +187,20 @@
 
 					<h3>Domain expertise</h3>
 					 
-					<p>Solar power System Design, Engineering  &  Integration – 1 kW to 1 MW<br>Solar Water Heaters Design, Engineering  &  Integration – 100 LPD to 500,000 LPD  (Commercial Installations) <br>Waste to Energy Solutions  <br>Biogas Plant <br>Integrated Sewage Treatment Plant (STP)<br>Energy Audit - Commercial and Residential<br>Process Audit <br>LED Lighting<br>Green Building Consultancy<br>Eco-Tourism  <br>Carbon Neutral Tourism's  <br>Net Zero Buildings and Resorts					</p>
+					<p>Solar power System Design, Engineering  &  Integration <br>
+						Solar Water Heaters Design, Engineering  &  Integration – (Commercial Installations) <br>
+						Solar Streetlights <br>
+						CCTV Solution's <br>
+						Water Level Controller  <br>
+						Waste to Energy Solutions <br>
+						Biogas Plant <br>
+						Integrated Sewage Treatment Plant (STP) <br>
+						Energy Audit - Commercial and Residential <br>
+						Process Audit <br>
+						Green Building Consultancy <br>
+						Eco-Tourism <br>
+						Carbon Neutral Tourism's <br>
+						Net Zero Buildings and Resorts</p>
 
 					<h3>Technology</h3>
 					 
