--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 		<div class="container">
 		<div class="row" id="lg">
 			<div class="col-md-9"><h4>Email: info@sednaenergy.in , ajayjose@gmail.com</h4></div>
-			<div class="col-md-3"><h4>Phone: +91 8891084443, +91 9400581251</h4></div>
+			<div class="col-md-3"><h4>Phone: +91 8891084443, +91 9400581251</h4>
+	        <!-- <img src="whatsapp.png" alt="">  -->
+			</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-5 header-logo">
@@ -160,13 +162,18 @@
  
 					<h3>SEDNA ENERY SYSTEMS</h3>
  
-					<p>A prestigious solar power solution company in Alappuzha that deals with the installation of solar panels and grids. It avails services all over Kerala with its Networks in Alappuzha, Cochin, Thrissur. for homes and offices.
+					<p>SEDNA ENERGY SYSTEMS, Since 2009 as a Power Electronics and renewable company headquartered at Alappuzha, Kerala India. It is promoted by a group of Engineers and Technocrats, having rich experience in the Electoral and electronic   industry. Their combined expertise along with a tireless dedication to customer service has enabled the company to rapidly expand business throughout the globe. 
+
+SEDNA ENERGY SYSTEMS, Offers solar power plants - on grid and off grid, solar Streetlights, Solar water heaters and complete solar turn key solutions. And  Power electronics products like Inverters, UPS CCTV, water level controllers etc
+We also consult Energy Audit, Energy management services in India at very affordable rates maintaining the best quality and on-time completion policy.
 					</p>
 
 
 					<h3>SEDNA SOLAR</h3>
  
-					<p>A leading clean and green technology solution provider based in Alappuzha, Kerala, India. The company provides cost effective logistics and infrastructure solutions for renewable resource utilisation to markets around the country. We offer a complete range of reliable products and services which include unique patented technologies.
+					<p>SEDNA ENERGY SYSTEMS, A leading clean and green technology solution provider based in Alappuzha, Kerala has with its customized services and solutions carved a niche for itself in the solar industry. 
+						We know it best – for a 25 years service life of a solar power plant, you need to be careful to choose your solar installer. Hence we strive to achieve engineering excellence and superior quality of our components and workmanship. We believe that to serve our biggest stakeholder, the environment, we need to nurture passion for the greater cause. And nevertheless we acknowledge that for a long standing relationship of over 25 years with you, we need to be credible and trustworthy.
+						The company has been able to make a name for itself in a relatively short span of time only because of its ability and commitments to ensure customer satisfaction by delivering quality work on time
 
 					</p>
 
