--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
 	<header class="top-header">
 		<div class="container">
 		<div class="row" id="lg">
-			<div class="col-md-9"><h4>Email: info@sednaenergy.in , ajayjose@gmail.com</h4></div>
-			<div class="col-md-3"><h4>Phone: +91 8891084443, +91 9400581251</h4>
-	        <!-- <img src="whatsapp.png" alt="">  -->
+			<div class="col-md-9 phone-container">
+				<img src="img/icons/gmail.png" alt="gmail image">
+				<h4><b>info@sednaenergy.in <br> akhilalezz@gmail.com</b></h4></div>
+			<div class="col-md-3 phone-container">
+				<img src="img/icons/phone.png" alt="whatsapp image"> 
+				<img src="img/icons/whatsapp.png" alt="whatsapp image"> 
+				<h4><b>+91 8891084443<br/> +91 9400581251</b></h4>
 			</div>
 			</div>
 			<div class="row">
