--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;800&display=swap" rel="stylesheet">  -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:600italic,400,800,700,300' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=BenchNine:300,400,700' rel='stylesheet' type='text/css'>
 	<script src="js/modernizr.js"></script>
@@ -138,6 +139,44 @@
 				<div class="col-md-4 col-sm-6">
 					<img src="img/trophy2.png" id="padtop">
 					<h3>24*7<br>Customer care support</h3>
+				</div>
+				<div class="col-md-4 col-sm-6">
+					<img src="img/trophy1.png" id="padtop">
+					<h3>Engineered with<br>high technical knowledge</h3>
+				</div>
+				<div class="col-md-4 col-sm-6">
+					<img src="img/trophy3.png" id="padtop">
+					<h3>Quality products<br>with ISO certification</h3>
+				</div>
+				<div class="col-md-4 col-sm-6">
+					<img src="img/trophy1.png" id="padtop">
+					<h3>Engineered with<br>high technical knowledge</h3>
+				</div>
+				<div class="col-md-4 col-sm-6">
+					<img src="img/trophy3.png" id="padtop">
+					<h3>Quality products<br>with ISO certification</h3>
+				</div>
+			</div>
+		</div>
+	</section><!-- end of about section -->
+	<section class="about text-center" id="about">
+		<div class="container">
+			<div class="row">
+				<h2>Testimonials</h2>
+				<h4 id="padleft">What our customers said</h4>
+			</div>
+			<div class="row" id="padbottom">
+				<div class="col-md-4 col-sm-6">
+					<img src="img/trophy2.png" id="padtop">
+					<h3>24*7<br>Customer care support</h3>
+				</div>
+				<div class="col-md-4 col-sm-6">
+					<img src="img/trophy1.png" id="padtop">
+					<h3>Engineered with<br>high technical knowledge</h3>
+				</div>
+				<div class="col-md-4 col-sm-6">
+					<img src="img/trophy3.png" id="padtop">
+					<h3>Quality products<br>with ISO certification</h3>
 				</div>
 				<div class="col-md-4 col-sm-6">
 					<img src="img/trophy1.png" id="padtop">
@@ -409,6 +448,80 @@ We also consult Energy Audit, Energy management services in India at very afford
 			</div>
 		</div>
 	</section><!-- end of team section -->
+
+	<div id="d">
+		<section class="team" id="team">
+			<div class="container">
+				<div class="row">
+					<div class="team-heading text-center">
+						<h2>Video gallery</h2>
+						<h4></h4>
+					</div>
+	
+				</div>
+				<div class="row galleryrow">
+					<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				  <!-- Indicators -->
+				  <ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+					<li data-target="#myCarousel" data-slide-to="3"></li>
+					<li data-target="#myCarousel" data-slide-to="4"></li>
+					<li data-target="#myCarousel" data-slide-to="5"></li>
+					<li data-target="#myCarousel" data-slide-to="6"></li>
+	
+	
+				  </ol>
+	
+				  <!-- Wrapper for slides -->
+				  <div class="carousel-inner" role="listbox">
+					<div class="item active">
+					  <img src="img/img1.jpg" alt="Chania">
+					</div>
+	
+					<div class="item">
+					  <img src="img/img2.jpg" alt="Chania">
+					</div>
+	
+					<div class="item">
+					  <img src="img/img3.jpg" alt="Flower">
+					</div>
+	
+					<div class="item">
+					  <img src="img/img4.jpg" alt="Flower">
+					</div>
+	
+					<div class="item">
+					  <img src="img/img5.jpg" alt="Flower">
+					</div>
+	
+					<div class="item">
+					  <img src="img/img6.jpg" alt="Flower">
+					</div>
+	
+					<div class="item">
+					  <img src="img/img7.jpg" alt="Flower">
+						</div>
+						
+						<div class="item">
+					  <img src="img/img8.jpg" alt="Flower">
+					</div>
+				  </div>
+	
+				  <!-- Left and right controls -->
+				  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				  </a>
+				  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				  </a>
+				</div>
+				</div>
+			</div>
+		</section><!-- end of team section -->
 	</div>
 	<!-- map section -->
 	<div class="api-map" id="contact">
