--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A leading clean and green technology solution provider based in Alappuzha, Kerala, India. The company provides cost effective logistics and infrastructure solutions for renewable resource utilization to markets  around the country.">
     <meta name="author" content="">
-	<title>Sedna Energy Systems</title>
+	<title>Sedna Energy Systems | Solar in cherthala</title>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -148,11 +148,11 @@
 					<img src="img/trophy3.png" id="padtop">
 					<h3>Quality products<br>with ISO certification</h3>
 				</div>
-				<div class="col-md-4 col-sm-6">
+				<div class="col-md-6 col-sm-6">
 					<img src="img/trophy1.png" id="padtop">
 					<h3>Engineered with<br>high technical knowledge</h3>
 				</div>
-				<div class="col-md-4 col-sm-6">
+				<div class="col-md-6 col-sm-6">
 					<img src="img/trophy3.png" id="padtop">
 					<h3>Quality products<br>with ISO certification</h3>
 				</div>
@@ -178,11 +178,11 @@
 					<img src="img/trophy3.png" id="padtop">
 					<h3>Quality products<br>with ISO certification</h3>
 				</div>
-				<div class="col-md-4 col-sm-6">
+				<div class="col-md-6 col-sm-6">
 					<img src="img/trophy1.png" id="padtop">
 					<h3>Engineered with<br>high technical knowledge</h3>
 				</div>
-				<div class="col-md-4 col-sm-6">
+				<div class="col-md-6 col-sm-6">
 					<img src="img/trophy3.png" id="padtop">
 					<h3>Quality products<br>with ISO certification</h3>
 				</div>
