--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A leading clean and green technology solution provider based in Alappuzha, Kerala, India. The company provides cost effective logistics and infrastructure solutions for renewable resource utilization to markets  around the country.">
     <meta name="author" content="">
-	<title>Sedna Energy Systems | Solar in cherthala</title>
+	<title>Sedna Energy Systems | Solar Energy Company | Solar Company in Alappuzha | Best Solar Company in Kerala | On Grid Solar Project | Solar Energy Dealers</title>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -34,7 +34,7 @@
 		<div class="row" id="lg">
 			<div class="col-md-9 phone-container">
 				<img src="img/icons/gmail.png" alt="gmail image">
-				<h4><b>info@sednaenergy.in <br> akhilalezz@gmail.com</b></h4></div>
+				<h4><b>info@sednaenergy.in <br> sednapower@gmail.com</b></h4></div>
 			<div class="col-md-3 phone-container">
 				<img src="img/icons/phone.png" alt="whatsapp image"> 
 				<img src="img/icons/whatsapp.png" alt="whatsapp image"> 
