--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 				</div>
 				<div class="col-md-6 col-sm-6">
 					<img src="img/trophy1.png" id="padtop">
-					<h3>Engineered with<br>high technical knowledge</h3>
+					<h3>Trusted<br>service</h3>
 				</div>
 				<div class="col-md-6 col-sm-6">
 					<img src="img/trophy3.png" id="padtop">
-					<h3>Quality products<br>with ISO certification</h3>
+					<h3>Well<br>experienced</h3>
 				</div>
 			</div>
 		</div>
@@ -290,17 +290,17 @@ We also consult Energy Audit, Energy management services in India at very afford
 								<img class="brain img-responsive" src="img/p/solarpp.png" alt="">
 							</div>
 						</div>
-						<h3>Solar Power Plant</h3>
+						<h3>Solar Projects - Off Grid/On Grid</h3>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="single-service">
 						<div class="single-service-img">
 							<div class="service-img">
-								<img class="brain img-responsive" src="img/p/solarinverter.png" alt="">
+								<img class="brain img-responsive" src="img/p/heater.png" alt="">
 							</div>
 						</div>
-						<h3>Solar Inverters</h3>
+						<h3>Solar Water Heaters</h3>
 					</div>
 				</div>
 
@@ -334,7 +334,7 @@ We also consult Energy Audit, Energy management services in India at very afford
 								<img class="brain img-responsive" src="img/p/spv.png" alt="">
 							</div>
 						</div>
-						<h3>SPV Panels</h3>
+						<h3>CCTV Solutions</h3>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -351,10 +351,10 @@ We also consult Energy Audit, Energy management services in India at very afford
 					<div class="single-service">
 						<div class="single-service-img">
 							<div class="service-img">
-								<img class="brain img-responsive" src="img/p/heater.png" alt="">
+								<img class="brain img-responsive" src="img/p/solarinverter.png" alt="">
 							</div>
 						</div>
-						<h3>Solar Water Heaters</h3>
+						<h3>Solar Inverters</h3>
 					</div>
 				</div>
 
