--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ We also consult Energy Audit, Energy management services in India at very afford
 							<ul><li><i class="fa fa-phone"></i><span>Phone:</span>
 							 <br>+91 8891084443 <br>+91 9400581251<br></li></ul>
 
-							<ul><li><br><i class="fa fa-envelope"></i><span>Email:</span> info@sednaenergy.in</li></ul>
+							<ul><li><br><i class="fa fa-envelope"></i><span>Email:</span> <br> info@sednaenergy.in <br>sednapower@gmail.com <br></li></ul>
 						</div>
 					</div>
 					<div class="col-md-5 col-md-offset-1 contact-info text-center set">
@@ -560,7 +560,7 @@ We also consult Energy Audit, Energy management services in India at very afford
 
 							<h3>reach us</h3>
 						<div class="info-detail">
-							<ul><li><i class="fa fa-map-marker"></i><span></span>Sedna Energy Systems, Kadakkarapally P.O Cherthala, Alappuzha PIN: 688529</li></ul>
+							<ul><li><i class="fa fa-map-marker"></i><span></span>Sedna Energy Systems,<br> Plot No.107A, Kadakkarapally P.O Cherthala, Alappuzha PIN: 688529</li></ul>
 						</div>
 					</div>
 				</div>
