--- a/index.html
+++ b/index.html
@@ -167,25 +167,18 @@
 			</div>
 			<div class="row" id="padbottom">
 				<div class="col-md-4 col-sm-6">
-					<img src="img/trophy2.png" id="padtop">
-					<h3>24*7<br>Customer care support</h3>
+					<img src="img/cus/one.png" id="padtop">
+					<h3> <b>Santhosh Kumar Karuvatta</b> <br> <br> They did beautiful installation on my Roof tiles at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 13.5 units from my installation on monthly average. Very much happy with illumine installation. Have recommended them for my colleague. All the best illumine. </h3>
 				</div>
 				<div class="col-md-4 col-sm-6">
-					<img src="img/trophy1.png" id="padtop">
-					<h3>Engineered with<br>high technical knowledge</h3>
+					<img src="img/cus/two.png" id="padtop">
+					<h3> <b>Yeshodanan</b> <br><br>Quality serice at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them</h3>
 				</div>
 				<div class="col-md-4 col-sm-6">
-					<img src="img/trophy3.png" id="padtop">
-					<h3>Quality products<br>with ISO certification</h3>
+					<img src="img/cus/three.png" id="padtop">
+					<h3><b>Amal Sebastian</b><br> <br> Professional team for designing , Installation and service for all projects.</h3>
 				</div>
-				<div class="col-md-6 col-sm-6">
-					<img src="img/trophy1.png" id="padtop">
-					<h3>Engineered with<br>high technical knowledge</h3>
-				</div>
-				<div class="col-md-6 col-sm-6">
-					<img src="img/trophy3.png" id="padtop">
-					<h3>Quality products<br>with ISO certification</h3>
-				</div>
+				
 			</div>
 		</div>
 	</section><!-- end of about section -->
@@ -319,10 +312,10 @@ We also consult Energy Audit, Energy management services in India at very afford
 					<div class="single-service">
 						<div class="single-service-img">
 							<div class="service-img">
-								<img class="brain img-responsive" src="img/p/battery.png" alt="">
+								<img class="brain img-responsive" src="img/p/cctv1.png" alt="">
 							</div>
 						</div>
-						<h3>Batteries</h3>
+						<h3>CCTV Solutions</h3>
 					</div>
 				</div>
 				<div class="row">
@@ -331,10 +324,10 @@ We also consult Energy Audit, Energy management services in India at very afford
 					<div class="single-service">
 						<div class="single-service-img">
 							<div class="service-img">
-								<img class="brain img-responsive" src="img/p/spv.png" alt="">
+								<img class="brain img-responsive" src="img/p/battery.png" alt="">
 							</div>
 						</div>
-						<h3>CCTV Solutions</h3>
+						<h3>Batteries</h3>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
@@ -351,10 +344,10 @@ We also consult Energy Audit, Energy management services in India at very afford
 					<div class="single-service">
 						<div class="single-service-img">
 							<div class="service-img">
-								<img class="brain img-responsive" src="img/p/solarinverter.png" alt="">
+								<img class="brain img-responsive" src="img/p/control.png" alt="">
 							</div>
 						</div>
-						<h3>Solar Inverters</h3>
+						<h3>Water Level Controller</h3>
 					</div>
 				</div>
 
