--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		<div class="container">
 			<div class="row">
 				<h2>Testimonials</h2>
-				<h4 id="padleft">What our customers said</h4>
+				<h4 id="padleft">What our customers said?</h4>
 			</div>
 			<div class="row" id="padbottom">
 				<div class="col-md-4 col-sm-6">
