--- a/index.html
+++ b/index.html
@@ -171,15 +171,21 @@
 				<div class="row" id="padbottom">
 					<div class="col-md-4 col-sm-6">
 						<img src="img/cus/one.png" id="padtop">
-						<h3> <b>Santhosh Kumar Karuvatta</b> <br> <br>" Quality serice at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them " </h3>
+						<h3> <b>Santhosh Kumar Karuvatta</b> <br>
+							<img src="img/cus/star.png" alt="star">
+							<br><br>" Quality serice at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them " </h3>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<img src="img/cus/two.png" id="padtop">
-						<h3> <b>Yeshodanan</b> <br><br>" They did beautiful installation on my Roof tiles at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 13.5 units from my installation on monthly average. Very much happy with illumine installation. Have recommended them for my colleague. All the best illumine."</h3>
+						<h3> <b>Yeshodanan</b> <br>
+							<img src="img/cus/star.png" alt="star">
+							<br><br>" They did beautiful installation on my Roof tiles at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 13.5 units from my installation on monthly average. Very much happy with illumine installation. Have recommended them for my colleague. All the best illumine."</h3>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<img src="img/cus/three.png" id="padtop">
-						<h3><b>Amal Sebastian</b><br> <br>" Professional team for designing , Installation and service for all projects. "</h3>
+						<h3><b>Amal Sebastian</b><br> 
+							<img src="img/cus/star.png" alt="star">
+							<br><br>" Professional team for designing , Installation and service for all projects. "</h3>
 					</div>
 					
 				</div>
