--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						<img src="img/cus/two.png" id="padtop">
 						<h3> <b>Yeshodanan</b> <br>
 							<img src="img/cus/star.png" alt="star">
-							<br><br>" They did beautiful installation on my Roof tiles at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 13.5 units from my installation on monthly average. Very much happy with illumine installation. Have recommended them for my colleague. All the best illumine."</h3>
+							<br><br>" They did beautiful installation on my Roof at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 24.5 units from my installation on monthly average. Very much happy with sedna installation. Have recommended them for my colleague. All the best sedna."</h3>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<img src="img/cus/three.png" id="padtop">
