--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 	<header class="top-header">
 		<div class="container">
 		<div class="row" id="lg">
-			<div class="col-md-9 phone-container">
+			<div class="col-md-6 mail-container">
 				<img src="img/icons/gmail.png" alt="gmail image">
 				<h4><b>info@sednaenergy.in <br> sednapower@gmail.com</b></h4></div>
-			<div class="col-md-3 phone-container">
+			<div class="col-md-6 phone-container">
 				<img src="img/icons/phone.png" alt="whatsapp image"> 
 				<h4><b> +91 8891084443 </b></h4>  
 				<img src="img/icons/whatsapp.png" alt="whatsapp image"> 
@@ -500,6 +500,8 @@ We also consult Energy Audit, Energy management services in India at very afford
 						<div class="info-detail">
 							<ul><li><i class="fa fa-facebook"></i><span></span>
 							<a href="https://www.facebook.com/sednaofficial" target="_blank"id="wt">www.facebook.com/sednaofficial</a></li></ul>
+							<ul><li><i class="fa fa-youtube"></i><span></span>
+							<a href="https://www.youtube.com/channel/UC5TZQBmb77OF3qThknH0qkQ "target="_blank"id="wt">www.youtube.com</a></li></ul>
 
 
 							<h3>reach us</h3>
@@ -509,7 +511,7 @@ We also consult Energy Audit, Energy management services in India at very afford
 					</div>
 				</div>
 			</div>
-		</div>
+			Karuvatta 	</div>
 	</section><!-- end of contact section -->
 	</div>
 	<!-- footer starts here -->
