--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 					      <ul class="nav navbar-nav navbar-right">
 					        <li><a class="menu" href="#a">Home</a></li>
 					        <li><a class="menu" href="#b">about us</a></li>
-					        <li><a class="menu" href="#c">products </a></li>
+							<li><a class="menu" href="#c">products </a></li>
+							<li><a class="menu" href="#f"> testimonials</a></li>
 					        <li><a class="menu" href="#d">gallery</a></li>
-					        <li><a class="menu" href="#e"> contact us</a></li>
+							 <li><a class="menu" href="#e"> contact us</a></li>		
 					      </ul>
 					    </div><!-- /navbar-collapse -->
 					  </div><!-- / .container-fluid -->
@@ -160,38 +161,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- end of about section -->
-		<!--testimonials section starts here-->
-		<section class="about text-center" id="about">
-			<div class="container">
-				<div class="row">
-					<h2>Testimonials</h2>
-					<h4 id="padleft">What our customers said?</h4>
-				</div>
-				<div class="row" id="padbottom">
-					<div class="col-md-4 col-sm-6">
-						<img src="img/cus/one.png" id="padtop">
-						<h3> <b>Santhosh Kumar Karuvatta</b> <br>
-							<img src="img/cus/star.png" alt="star">
-							<br><br>" Quality serice at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them " </h3>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<img src="img/cus/two.png" id="padtop">
-						<h3> <b>Yeshodanan</b> <br>
-							<img src="img/cus/star.png" alt="star">
-							<br><br>" They did beautiful installation on my Roof at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 24.5 units from my installation on monthly average. Very much happy with sedna installation. Have recommended them for my colleague. All the best sedna."</h3>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<img src="img/cus/three.png" id="padtop">
-						<h3><b>Amal Sebastian</b><br> 
-							<img src="img/cus/star.png" alt="star">
-							<br><br>" Professional team for designing , Installation and service for all projects. "</h3>
-					</div>
-					
-				</div>
-			</div>
-		</section><!-- end of about section -->
-	<!-- team section -->
+
 	<div id="b">
 	<section class="team" id="team1">
 		<div class="container" id="">
@@ -375,7 +345,38 @@ We also consult Energy Audit, Energy management services in India at very afford
 		</div>
 	</section><!-- end of service section -->
 	</div>
-
+	<!-- end of about section -->
+		<!--testimonials section starts here-->
+		<section class="about text-center" id="f">
+			<div class="container">
+				<div class="row">
+					<h2>Testimonials</h2>
+					<h4 id="padleft">What our customers said?</h4>
+				</div>
+				<div class="row" id="padbottom">
+					<div class="col-md-4 col-sm-6">
+						<img src="img/cus/one.png" id="padtop">
+						<h3> <b>Santhosh Kumar Karuvatta</b> <br>
+							<img src="img/cus/star.png" alt="star">
+							<br><br>" Quality serice at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them " </h3>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<img src="img/cus/two.png" id="padtop">
+						<h3> <b>Yeshodanan</b> <br>
+							<img src="img/cus/star.png" alt="star">
+							<br><br>" They did beautiful installation on my Roof at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 24.5 units from my installation on monthly average. Very much happy with sedna installation. Have recommended them for my colleague. All the best sedna."</h3>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<img src="img/cus/three.png" id="padtop">
+						<h3><b>Amal Sebastian</b><br> 
+							<img src="img/cus/star.png" alt="star">
+							<br><br>" Professional team for designing , Installation and service for all projects. "</h3>
+					</div>
+					
+				</div>
+			</div>
+		</section><!-- end of about section -->
+	<!-- team section -->
 	<!-- team section -->
 	<div id="d">
 	<section class="team" id="team">
@@ -463,8 +464,10 @@ We also consult Energy Audit, Energy management services in India at very afford
 
 				</div>
 			</div>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/EuwfkW5M-kU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<iframe width="560" height="315" src="https://www.youtube.com/channel/UC5TZQBmb77OF3qThknH0qkQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			
+			<iframe width="100%" height="400px" src="https://www.youtube.com/embed/EuwfkW5M-kU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="100%" height="400px" src="https://www.youtube.com/watch?v=Xa3vBuRcVyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 		</section><!-- end of team section -->
 	</div>
 	<!-- map section -->
