--- a/index.html
+++ b/index.html
@@ -357,20 +357,23 @@ We also consult Energy Audit, Energy management services in India at very afford
 					<div class="col-md-4 col-sm-6">
 						<img src="img/cus/one.png" id="padtop">
 						<h3> <b>Santhosh Kumar Karuvatta</b> <br>
+							<img src="img/location.png" alt="location"><p><small>Alappuzha</small></p>
 							<img src="img/cus/star.png" alt="star">
-							<br><br>" Quality serice at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them " </h3>
+							<br>" Quality serice at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them " </h3>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<img src="img/cus/two.png" id="padtop">
 						<h3> <b>Yeshodanan</b> <br>
+							<img src="img/location.png" alt="location"><p><small>Kayamkulam</small></p>
 							<img src="img/cus/star.png" alt="star">
-							<br><br>" They did beautiful installation on my Roof at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 24.5 units from my installation on monthly average. Very much happy with sedna installation. Have recommended them for my colleague. All the best sedna."</h3>
+							<br>" They did beautiful installation on my Roof at my Villa. They know how to meet customer requirement. Though kseb took 2 months for approvals, they keep me updated weekly status. I am getting 24.5 units from my installation on monthly average. Very much happy with Sedna installation. Have recommended them for my colleague. All the best Sedna."</h3>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<img src="img/cus/three.png" id="padtop">
 						<h3><b>Amal Sebastian</b><br> 
+							<img src="img/location.png" alt="location"><p><small>Palluruthy</small></p>
 							<img src="img/cus/star.png" alt="star">
-							<br><br>" Professional team for designing , Installation and service for all projects. "</h3>
+							<br>" Professional team for designing , Installation and service for all projects. "</h3>
 					</div>
 					
 				</div>
@@ -466,8 +469,7 @@ We also consult Energy Audit, Energy management services in India at very afford
 			</div>
 			
 			<iframe width="100%" height="400px" src="https://www.youtube.com/embed/EuwfkW5M-kU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<iframe width="100%" height="400px" src="https://www.youtube.com/watch?v=Xa3vBuRcVyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+			<iframe width="100%" height="400px" src="https://www.youtube.com/embed/Xa3vBuRcVyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</section><!-- end of team section -->
 	</div>
 	<!-- map section -->
