--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 				<h4><b>info@sednaenergy.in <br> sednapower@gmail.com</b></h4></div>
 			<div class="col-md-6 phone-container">
 				<img src="img/icons/phone.png" alt="whatsapp image"> 
-				<h4><b> +91 8891084443 </b></h4>  
+				<h4><b style="font-size: x-large;"> +91 8891084443 </b></h4>  
 				<img src="img/icons/whatsapp.png" alt="whatsapp image"> 
-				<h4><b> +91 9400581251 </b></h4>
+				<h4><b style="font-size: x-large;"> +91 9400581251 </b></h4>
 			</div>
 			</div>
 			<div class="row">
