--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 				<h4><b>info@sednaenergy.in <br> sednapower@gmail.com</b></h4></div>
 			<div class="col-md-6 phone-container">
 				<img src="img/icons/phone.png" alt="whatsapp image"> 
-				<h4><b style="font-size: x-large;"> +91 8891084443 </b></h4>  
+				<a href="tel:+918891084443"><h4><b style="font-size: x-large;"> +91 8891084443 </b></h4></a>  
 				<img src="img/icons/whatsapp.png" alt="whatsapp image"> 
-				<h4><b style="font-size: x-large;"> +91 9400581251 </b></h4>
+				<a href="tel:+919400581251"><h4><b style="font-size: x-large;"> +91 9400581251 </b></h4></a>
 			</div>
 			</div>
 			<div class="row">
@@ -467,7 +467,9 @@ We also consult Energy Audit, Energy management services in India at very afford
 
 				</div>
 			</div>
-			
+			<div class="video-container">
+
+			</div>
 			<iframe width="100%" height="400px" src="https://www.youtube.com/embed/EuwfkW5M-kU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<iframe width="100%" height="400px" src="https://www.youtube.com/embed/Xa3vBuRcVyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</section><!-- end of team section -->
@@ -516,7 +518,7 @@ We also consult Energy Audit, Energy management services in India at very afford
 					</div>
 				</div>
 			</div>
-			Karuvatta 	</div>
+			 	</div>
 	</section><!-- end of contact section -->
 	</div>
 	<!-- footer starts here -->
