--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	s0.parentNode.insertBefore(s1,s0);
 	})();
 	</script>
-	<!--End of Tawk.to Script-->
+	<!--End of Tawk.to Script comment-->
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
