--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ We also consult Energy Audit, Energy management services in India at very afford
 					</div>
 				</div>
 
-								<div class="col-md-3 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="single-service">
 						<div class="single-service-img">
 							<div class="service-img">
@@ -414,12 +414,13 @@ We also consult Energy Audit, Energy management services in India at very afford
 			    <li data-target="#myCarousel" data-slide-to="4"></li>
 			    <li data-target="#myCarousel" data-slide-to="5"></li>
 			    <li data-target="#myCarousel" data-slide-to="6"></li>
+			    <li data-target="#myCarousel" data-slide-to="7"></li>
 
 
 			  </ol>
 
 			  <!-- Wrapper for slides -->
-			  <div class="carousel-inner" role="listbox">
+			  <div class="carousel-inner carousel-gallery" role="listbox">
 			    <div class="item active">
 			      <img src="img/img1.jpg" alt="Chania">
 			    </div>
@@ -448,9 +449,13 @@ We also consult Energy Audit, Energy management services in India at very afford
 			      <img src="img/img7.jpg" alt="Flower">
 					</div>
 					
-					<div class="item">
+				<div class="item">
 			      <img src="img/img8.jpg" alt="Flower">
-			    </div>
+				</div>
+
+				<div class="item">
+					<img src="img/aerial/1.JPG" alt="Flower">
+				  </div>
 			  </div>
 
 			  <!-- Left and right controls -->
@@ -479,11 +484,12 @@ We also consult Energy Audit, Energy management services in India at very afford
 				</div>
 			</div>
 			<div class="video-container">
-
+				<iframe width="100%" height="400px" src="https://www.youtube.com/embed/fOdniTegKtA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="100%" height="400px" src="https://www.youtube.com/embed/A2wNZM1pw5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="100%" height="400px" src="https://www.youtube.com/embed/Xa3vBuRcVyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
-			<iframe width="100%" height="400px" src="https://www.youtube.com/embed/fOdniTegKtA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<iframe width="100%" height="400px" src="https://www.youtube.com/embed/EuwfkW5M-kU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<iframe width="100%" height="400px" src="https://www.youtube.com/embed/Xa3vBuRcVyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<div></div>
+			
 		</section><!-- end of team section -->
 	</div>
 	<!-- map section -->
@@ -619,6 +625,7 @@ $("#myNavbar a").on('click', function(event) {
 <h3 class="none">solar alappuzha<h3>
 <h3 class="none">solar kottayam<h3>
 <h3 class="none">d light<h3>
+
 <h3 class="none">inverter service <h3>
 <h3 class="none">electronic services sales<h3>
 <script>
