--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
  <div class="row">
  <div class="team-heading text-center" id="">
  
- <h3>SEDNA ENERY SYSTEMS</h3>
+ <h3>SEDNA ENERGY SYSTEMS</h3>
  
  <p>SEDNA ENERGY SYSTEMS, Since 2009 as a Power Electronics and renewable company headquartered at Alappuzha, Kerala India. It is promoted by a group of Engineers and Technocrats, having rich experience in the Electoral and electronic industry. Their combined expertise along with a tireless dedication to customer service has enabled the company to rapidly expand business throughout the globe. 
 
@@ -371,7 +371,7 @@ We also consult Energy Audit, Energy management services in India at very afford
 						<h3> <b>Santhosh Kumar Karuvatta</b> <br>
 							<img src="img/location.png" alt="location"><p><small>Alappuzha</small></p>
 							<img src="img/cus/star.png" alt="star">
-							<br>" Quality serice at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them " </h3>
+							<br>" Quality service at resonable rate & cost efficiency at it's best with its premium quality product's and world class services. Prices are competitive for the quality on offer. Am always glad to have opted for them " </h3>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<img src="img/cus/two.png" id="padtop">
